--- a/waybar/style.css
+++ b/waybar/style.css
@@ -45,11 +45,13 @@ window#waybar.chromium {
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
+/*
 #workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
     box-shadow: inherit;
+    background: rgba(0, 0, 0, 0.2);
     border-bottom: 3px solid #ffffff;
 }
+*/
 
 #workspaces button.focused {
     background-color: #64727D;
