--- a/waybar/style.css
+++ b/waybar/style.css
@@ -2,7 +2,7 @@
     border: none;
     border-radius: 0;
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: Ubuntu, Helvetica, Arial, sans-serif, FontAwesome;
+    font-family: Fira Code, Ubuntu, Helvetica, Arial, sans-serif, FontAwesome;
     font-size: 13px;
     min-height: 0;
 }
