--- a/waybar/style.css
+++ b/waybar/style.css
@@ -2,8 +2,8 @@
     border: none;
     border-radius: 0;
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: Fira Code, Ubuntu, Helvetica, Arial, sans-serif, FontAwesome;
-    font-size: 13px;
+    font-family: League Spartan, sans-serif, FontAwesome;
+    font-size: 16px;
     min-height: 0;
 }
 
